--- a/style.css
+++ b/style.css
@@ -42,6 +42,11 @@ body {
 
 a, a:visited { 
   color: blue;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
 }
 
 a.active {
